--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background-color: rgb(154, 209, 140);
+    background-color: rgb(92, 95, 92);
 }
 
 .player-1 {
@@ -51,11 +51,35 @@ body {
     border-color: rgb(243, 243, 244);
 }
 
-.container {
+.modes {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(92, 95, 92);
+    width: 300px;
+    gap: 20px;
+}
+
+.mode-block {
+    display: flex;
+    flex-direction: column;
+}
+
+button {
+    background-color: rgb(149, 125, 125);
+    border-style: solid;
+    border-radius: 9%;
+    height: 30px;
+    margin: 3px;
+}
+
+.page {
+    display: flex;
+    flex-direction: row;
     margin-left: 200px;
     margin-top: 100px;
     margin-right: 40px;
     margin-bottom: 50px;
+    gap:25px;
 }
 
 .grid-container {
@@ -67,7 +91,7 @@ body {
     height: 500px;
     width: 500px;
     border: 3px solid black;
-    /*box-shadow: 0 0 50px yellow;*/
+    box-shadow: 0 0 10px yellow;
 }
 
 .grid-item {
