--- a/style.css
+++ b/style.css
@@ -82,6 +82,21 @@ button {
     gap:25px;
 }
 
+.friend-list {
+    margin: 0;
+    padding-left: 20px;
+    border-style:double;
+    background-color: rgb(216, 213, 213);
+    height: 250px;
+    width: 200px;
+}
+
+li {
+    border-style: outset;
+    margin: 2px;
+    padding: 2px;
+}
+
 .grid-container {
     display: grid;
     grid-template-rows: repeat(8, 1fr);
