--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ button {
     display: flex;
     flex-direction: row;
     margin-left: 200px;
-    margin-top: 100px;
+    margin-top: 50px;
     margin-right: 40px;
     margin-bottom: 50px;
     gap:25px;
@@ -107,8 +107,26 @@ li {
     width: 500px;
     border: 3px solid black;
     box-shadow: 0 0 10px yellow;
+    background-color: rgb(86, 81, 115);
 }
 
 .grid-item {
     border: 1px solid black;
+}
+
+.cosmetic {
+    display: inline;
+    border-style: hidden;
+    
+}
+
+a {
+    text-decoration: none;
+    color:white;
+}
+
+ul {
+    background-color: rgba(83, 81, 81, 0.8);
+    padding: 20px;
+    margin: 0;
 }
