--- a/Taskbar/cosmetic.css
+++ b/Taskbar/cosmetic.css
@@ -7,7 +7,7 @@ body {
     display: flex;
     flex-direction: row;
     border-style: double;
-    height: 200px;
+    height: 250px;
     justify-content: space-around;
     background-color: rgb(255, 255, 255);
     margin-left: 100px;
@@ -21,4 +21,10 @@ body {
 
 img {
     height: 90%;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
 }
